Enable local application log export by default (#200)
* Enable local OTLP logs by default

* Complete local log export review fixes